# pandas-render

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: release-please.yml  testing.yml
LICENSES/: IPYTHON_LICENSE  PANDAS_LICENSE
examples/: 01_basics.ipynb  01_basics.py  01_getting_started.ipynb  01_getting_started.py  02_components.ipynb  02_components.py  main.ipynb  make_examples.sh
pandas_render/: __init__.py  utils.py
pandas_render/base/: Element.py
pandas_render/elements/: Image.py  Link.py  __init__.py
pandas_render/extensions/: DataFrame.py  Series.py  __init__.py
pandas_render/make/: Element.py  __init__.py
pandas_render/pandas/: DataFrame.py  Series.py
pandas_render/templates/: Toggle.py
pandas_render/zoo/: Link.py
resources/scripts/: make_setup.sh
tests/: test_pandas_render.py
tests/components/: test_toggle.py
tests/elements/: test_image.py  test_link.py
tests/extensions/: test_dataframe.py  test_renderings.py  test_series.py
tests/templates/: test_toggle.py
