[project]
name = "pandas-render"
version = "0.2.1"
description = "A pandas extension for rendering DataFrames"
readme = "README.md"
authors = [
    { name = "Darius Morawiec", email = "nok@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = [
    "ipython>=7.11.1",
    "jinja2>=3.0.0",
    "pandas>=1.0.0",
]
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization"
]

[project.urls]
Source = "https://github.com/nok/pandas-render"
Issues = "https://github.com/nok/pandas-render/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-sugar>=1.0.0",
]
examples = [
    "jupyterlab>=4.3.6",
]

[tool.coverage.run]
source = ["pandas_render"]

[tool.coverage]
skip_empty = true
